--- a/src/carnet/vues/VuePageDePresentation.fxml
+++ b/src/carnet/vues/VuePageDePresentation.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.shape.Circle?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="carnet.panneauDeControle.PanneauDeControlePageDePresentation">
    <center>
       <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <center>
@@ -16,18 +16,20 @@
                      <center>
                         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                            <children>
-                              <TextField />
-                              <TextField />
-                              <TextArea prefHeight="200.0" prefWidth="200.0" />
-                              <TextField />
+                              <TextField fx:id="dateDebut" promptText="Date début"/>
+                              <TextField fx:id="dateFin" promptText="Date fin"/>
+                              <TextArea fx:id="participants" prefHeight="200.0" prefWidth="200.0"
+                                        promptText="Participants"/>
+                              <TextField fx:id="auteur" promptText="Auteur"/>
                            </children>
                         </VBox>
                      </center>
                      <top>
-                        <TextField BorderPane.alignment="CENTER" />
+                        <TextField fx:id="titre" promptText="Titre" BorderPane.alignment="CENTER"/>
                      </top>
                      <bottom>
-                        <Circle fill="DODGERBLUE" radius="100.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER" />
+                        <Circle fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE"
+                                BorderPane.alignment="CENTER"/>
                      </bottom>
                   </BorderPane>
                   <VBox prefHeight="200.0" prefWidth="100.0">
