--- a/src/carnet/vues/VuePageDuCarnet.fxml
+++ b/src/carnet/vues/VuePageDuCarnet.fxml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.shape.Circle?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="carnet.panneauDeControle.PanneauDeControlePageDuCarnet">
    <center>
       <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <left>
-            <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
+            <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER"/>
          </left>
          <right>
-            <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
+            <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER"/>
          </right>
          <bottom>
-            <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
+            <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER"/>
          </bottom>
          <center>
             <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -26,10 +26,11 @@
                         <Circle fill="DODGERBLUE" radius="100.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER" />
                      </bottom>
                      <top>
-                        <TextField BorderPane.alignment="CENTER" />
+                        <TextField fx:id="titre" promptText="Titre" BorderPane.alignment="CENTER"/>
                      </top>
                      <center>
-                        <TextArea prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                        <TextArea fx:id="zoneDeTexte" prefHeight="200.0" prefWidth="200.0" promptText="Zone de texte"
+                                  BorderPane.alignment="CENTER"/>
                      </center>
                   </BorderPane>
                   <VBox prefHeight="200.0" prefWidth="100.0">
