--- a/src/carnet/vues/VueMenu.fxml
+++ b/src/carnet/vues/VueMenu.fxml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.BorderPane?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="carnet.panneauDeControle.PanneauDeControleMenu">
+<?import javafx.scene.layout.*?>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="carnet.panneauDeControle.PanneauDeControleMenu">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
                 <Menu mnemonicParsing="false" text="Fichier">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#enregistrer" text="Enregistrer"/>
-                        <MenuItem mnemonicParsing="false" onAction="#nouveau" text="Nouveau"/>
+                        <MenuItem mnemonicParsing="false" onAction="#enregistrer" text="Enregistrer" />
+                        <MenuItem mnemonicParsing="false" onAction="#nouveau" text="Nouveau" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edition">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#renommer" text="Renommer"/>
-                        <MenuItem mnemonicParsing="false" onAction="#supprimer" text="Supprimer"/>
+                        <MenuItem mnemonicParsing="false" onAction="#renommer" text="Renommer" />
+                        <MenuItem mnemonicParsing="false" onAction="#supprimer" text="Supprimer" />
                     </items>
           </Menu>
-                <Menu mnemonicParsing="false" text="Quitter"/>
+                <Menu mnemonicParsing="false" text="Quitter">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#quitter" text="Quitter" />
+               </items></Menu>
         </menus>
       </MenuBar>
    </top>
     <center>
-        <fx:include fx:id="PageDePresentation" source="VuePageDePresentation.fxml"/>
+        <fx:include fx:id="PageDePresentation" source="VuePageDePresentation.fxml" />
     </center>
 </BorderPane>
