--- a/src/carnet/vues/VuePageDuCarnet.fxml
+++ b/src/carnet/vues/VuePageDuCarnet.fxml
@@ -24,12 +24,12 @@
                      <bottom>
                         <Circle fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER" />
                      </bottom>
-                     <top>
-                        <TextField fx:id="titre" promptText="Titre" BorderPane.alignment="CENTER" />
-                     </top>
                      <center>
                         <TextArea fx:id="zoneDeTexte" prefHeight="200.0" prefWidth="200.0" promptText="Zone de texte" BorderPane.alignment="CENTER" />
                      </center>
+                     <top>
+                        <Label fx:id="titre" text="Titre" BorderPane.alignment="CENTER" />
+                     </top>
                   </BorderPane>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
