--- a/src/carnet/vues/VuePageDuCarnet.fxml
+++ b/src/carnet/vues/VuePageDuCarnet.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-
+<?import javafx.scene.shape.Circle?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="carnet.panneauDeControle.PanneauDeControlePageDuCarnet">
    <center>
       <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -22,7 +21,13 @@
                <children>
                   <BorderPane prefHeight="200.0" prefWidth="200.0">
                      <bottom>
-                        <Circle fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER" />
+                         <HBox alignment="CENTER" spacing="10.0">
+                             <children>
+                                 <Circle fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE"
+                                         BorderPane.alignment="CENTER"/>
+                                 <Button mnemonicParsing="false" onAction="#enregistrer" text="Button"/>
+                             </children>
+                         </HBox>
                      </bottom>
                      <center>
                         <TextArea fx:id="zoneDeTexte" prefHeight="200.0" prefWidth="200.0" promptText="Zone de texte" BorderPane.alignment="CENTER" />
