--- a/src/carnet/vues/VuePageDePresentation.fxml
+++ b/src/carnet/vues/VuePageDePresentation.fxml
@@ -14,10 +14,11 @@
                      <center>
                         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                            <children>
-                              <TextField fx:id="dateDebut" promptText="Date début" />
-                              <TextField fx:id="dateFin" promptText="Date fin" />
-                              <TextArea fx:id="participants" prefHeight="200.0" prefWidth="200.0" promptText="Participants" />
-                              <TextField fx:id="auteur" promptText="Auteur" />
+                              <DatePicker fx:id="dateDebut" promptText="Date début"/>
+                              <DatePicker fx:id="dateFin" promptText="Date fin"/>
+                              <TextArea fx:id="participants" prefHeight="200.0" prefWidth="200.0"
+                                        promptText="Participants"/>
+                              <TextField fx:id="auteur" promptText="Auteur"/>
                            </children>
                         </VBox>
                      </center>
