--- a/src/carnet/vues/VuePageDePresentation.fxml
+++ b/src/carnet/vues/VuePageDePresentation.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.*?>
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="carnet.panneauDeControle.PanneauDeControlePageDePresentation">
    <center>
       <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -14,38 +15,33 @@
                      <center>
                         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                             <children>
-                                <DatePicker fx:id="dateDebut" promptText="Date début"/>
-                                <DatePicker fx:id="dateFin" promptText="Date fin"/>
-                                <TextArea fx:id="participants" prefHeight="200.0" prefWidth="200.0"
-                                          promptText="Participants"/>
-                                <TextField fx:id="auteur" promptText="Auteur"/>
+                                <DatePicker fx:id="dateDebut" promptText="Date début" />
+                                <DatePicker fx:id="dateFin" promptText="Date fin" />
+                                <TextArea fx:id="participants" prefHeight="200.0" prefWidth="200.0" promptText="Participants" />
+                                <TextField fx:id="auteur" promptText="Auteur" />
                             </children>
                         </VBox>
                      </center>
                      <bottom>
                         <HBox alignment="CENTER" spacing="10.0">
                            <children>
-                              <Circle fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER" />
-                               <Button mnemonicParsing="false" onAction="#sauvegarderLesModifications" text="Save"/>
+                              <Circle fx:id="cercle" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER" />
+                               <Button fx:id="boutonSauvegarde" mnemonicParsing="false" onAction="#sauvegarderLesModifications" style="-fx-background-color: null;" />
                            </children>
                         </HBox>
                      </bottom>
                   </BorderPane>
-                   <ImageView fx:id="imagePageDePresentation" fitHeight="253.0" fitWidth="340.0"
-                              onDragDropped="#onDragDropped" onDragOver="#onDragOver" onMouseClicked="#onMouseClicked"
-                              pickOnBounds="true" preserveRatio="true"/>
+                   <ImageView fx:id="imagePageDePresentation" fitHeight="277.0" fitWidth="340.0" onDragDropped="#onDragDropped" onDragOver="#onDragOver" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true" />
                </children>
             </HBox>
          </center>
       </BorderPane>
    </center>
    <right>
-       <Button id="boutonPageSuivante" mnemonicParsing="false" onAction="#pageSuivante" text="Button"
-               BorderPane.alignment="CENTER"/>
+       <Button id="boutonPageSuivante" fx:id="boutonSuiv" mnemonicParsing="false" onAction="#pageSuivante" style="-fx-background-color: null;" BorderPane.alignment="CENTER" />
    </right>
    <bottom>
-       <Button mnemonicParsing="false" onAction="#nouvellePage" opacity="0.0" text="Button"
-               BorderPane.alignment="CENTER"/>
+       <Button mnemonicParsing="false" onAction="#nouvellePage" opacity="0.0" text="Button" BorderPane.alignment="CENTER" />
    </bottom>
    <top>
       <Label fx:id="titre" text="Titre" BorderPane.alignment="CENTER" />
