--- a/src/carnet/vues/VuePageDuCarnet.fxml
+++ b/src/carnet/vues/VuePageDuCarnet.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.*?>
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="carnet.panneauDeControle.PanneauDeControlePageDuCarnet">
    <center>
       <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <left>
-            <Button mnemonicParsing="false" onAction="#pagePrecedente" text="Button" BorderPane.alignment="CENTER"/>
+            <Button fx:id="boutonPrec" mnemonicParsing="false" onAction="#pagePrecedente" style="-fx-background-color: null;" BorderPane.alignment="CENTER" />
          </left>
          <right>
-            <Button mnemonicParsing="false" onAction="#pageSuivante" text="Button" BorderPane.alignment="CENTER"/>
+            <Button fx:id="boutonSuiv" mnemonicParsing="false" onAction="#pageSuivante" style="-fx-background-color: null;" BorderPane.alignment="CENTER" />
          </right>
          <bottom>
-            <Button mnemonicParsing="false" onAction="#nouvellePage" opacity="0.0" text="Button"
-                    BorderPane.alignment="CENTER"/>
+            <Button mnemonicParsing="false" onAction="#nouvellePage" opacity="0.0" text="Button" BorderPane.alignment="CENTER" />
          </bottom>
          <center>
             <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -24,15 +24,13 @@
                      <bottom>
                          <HBox alignment="CENTER" spacing="10.0">
                             <children>
-                               <Circle fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE"
-                                       BorderPane.alignment="CENTER"/>
-                               <Button mnemonicParsing="false" onAction="#enregistrer" text="Button"/>
+                               <Circle fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER" />
+                               <Button fx:id="boutonSauvegarde" mnemonicParsing="false" onAction="#enregistrer" style="-fx-background-color: null;" />
                             </children>
                          </HBox>
                      </bottom>
                      <center>
-                        <TextArea fx:id="zoneDeTexte" prefHeight="200.0" prefWidth="200.0"
-                                  promptText="Racontez votre voyage..." BorderPane.alignment="CENTER"/>
+                        <TextArea fx:id="zoneDeTexte" prefHeight="200.0" prefWidth="200.0" promptText="Racontez votre voyage..." BorderPane.alignment="CENTER" />
                      </center>
                      <top>
                         <Label fx:id="titre" text="Titre" BorderPane.alignment="CENTER" />
@@ -40,9 +38,7 @@
                   </BorderPane>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <ImageView fx:id="imagePageDuCarnet" fitHeight="150.0" fitWidth="200.0"
-                                   onDragDropped="#onDragDropped" onDragOver="#onDragOver"
-                                   onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true"/>
+                        <ImageView fx:id="imagePageDuCarnet" fitHeight="150.0" fitWidth="200.0" onDragDropped="#onDragDropped" onDragOver="#onDragOver" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true" />
                      </children>
                   </VBox>
                </children>
