--- a/src/main/resources/vues/VuePageDuCarnet.fxml
+++ b/src/main/resources/vues/VuePageDuCarnet.fxml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="carnet.panneauDeControle.PanneauDeControlePageDuCarnet">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="carnet.panneauDeControle.PanneauDeControlePageDuCarnet">
     <center>
         <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <left>
-                <Button fx:id="boutonPrec" mnemonicParsing="false" onAction="#pagePrecedente"
-                        style="-fx-background-color: null;" BorderPane.alignment="CENTER"/>
+                <Button fx:id="boutonPrec" mnemonicParsing="false" onAction="#pagePrecedente" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER" />
             </left>
             <right>
-                <Button fx:id="boutonSuiv" mnemonicParsing="false" onAction="#pageSuivante"
-                        style="-fx-background-color: null;" BorderPane.alignment="CENTER"/>
+                <Button fx:id="boutonSuiv" mnemonicParsing="false" onAction="#pageSuivante" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER" />
             </right>
             <bottom>
-                <Button mnemonicParsing="false" onAction="#nouvellePage" opacity="0.0" text="Button"
-                        BorderPane.alignment="CENTER"/>
+                <Button mnemonicParsing="false" onAction="#nouvellePage" opacity="0.0" prefHeight="40.0" prefWidth="40.0" text="Button" BorderPane.alignment="CENTER" />
             </bottom>
             <center>
                 <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -27,26 +23,22 @@
                             <bottom>
                                 <HBox alignment="CENTER" spacing="10.0">
                                     <children>
-                                        <Button fx:id="home" mnemonicParsing="false" onAction="#goHome"
-                                                style="-fx-background-color: null;"/>
-                                        <Button fx:id="boutonSauvegarde" mnemonicParsing="false" onAction="#enregistrer"
-                                                style="-fx-background-color: null;"/>
+                                        <Button fx:id="home" mnemonicParsing="false" onAction="#goHome" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: transparent;" />
+                                        <Button fx:id="boutonSauvegarde" mnemonicParsing="false" onAction="#enregistrer" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: transparent;" />
                                     </children>
                                 </HBox>
                             </bottom>
                             <center>
-                                <TextArea fx:id="zoneDeTexte" prefHeight="200.0" prefWidth="200.0"
-                                          promptText="Racontez votre voyage..." BorderPane.alignment="CENTER"/>
+                                <TextArea fx:id="zoneDeTexte" prefHeight="294.0" prefWidth="211.0" promptText="Racontez votre voyage..." BorderPane.alignment="CENTER" />
                             </center>
                             <top>
-                                <Label fx:id="titre" text="Titre" BorderPane.alignment="CENTER"/>
+                                <Label fx:id="titre" prefHeight="26.0" prefWidth="33.0" text="Titre" BorderPane.alignment="CENTER" />
                             </top>
                         </BorderPane>
-                        <VBox fx:id="Hbox" prefHeight="200.0" prefWidth="100.0">
+                        <VBox fx:id="Vbox" alignment="CENTER" prefHeight="66.0" prefWidth="319.0">
                             <children>
-                                <ImageView fx:id="imagePageDuCarnet" fitHeight="150.0" fitWidth="200.0"
-                                           onDragDropped="#onDragDropped" onDragOver="#onDragOver"
-                                           onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true"/>
+                        <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="2.0" style="-fx-background-color: null;" />
+                                <ImageView fx:id="imagePageDuCarnet" fitHeight="147.0" fitWidth="319.0" onDragDropped="#onDragDropped" onDragOver="#onDragOver" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true" />
                             </children>
                         </VBox>
                     </children>
