--- a/src/main/resources/vues/VuePageDePresentation.fxml
+++ b/src/main/resources/vues/VuePageDePresentation.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="carnet.panneauDeControle.PanneauDeControlePageDePresentation">
     <center>
         <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -24,13 +24,22 @@
                             <bottom>
                                 <HBox alignment="CENTER" spacing="10.0">
                                     <children>
-                                        <Button fx:id="lastPage" mnemonicParsing="false" onAction="#leaveHome" style="-fx-background-color: transparent;" />
-                                        <Button fx:id="boutonSauvegarde" mnemonicParsing="false" onAction="#sauvegarderLesModifications" style="-fx-background-color: transparent;" />
+                                        <Button fx:id="lastPage" mnemonicParsing="false" onAction="#leaveHome"
+                                                style="-fx-background-color: transparent;"/>
+                                        <Button fx:id="boutonSauvegarde" mnemonicParsing="false"
+                                                onAction="#sauvegarderLesModifications"
+                                                style="-fx-background-color: transparent;"/>
                                     </children>
                                 </HBox>
                             </bottom>
                         </BorderPane>
-                        <ImageView fx:id="imagePageDePresentation" fitHeight="277.0" fitWidth="340.0" onDragDropped="#onDragDropped" onDragOver="#onDragOver" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="imagePageDePresentation" fitHeight="277.0" fitWidth="340.0"
+                                   onDragDropped="#onDragDropped" onDragOver="#onDragOver"
+                                   onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../images/image.png"/>
+                            </image>
+                        </ImageView>
                     </children>
                 </HBox>
             </center>
