--- a/src/main/resources/vues/VuePageDuCarnet.fxml
+++ b/src/main/resources/vues/VuePageDuCarnet.fxml
@@ -4,17 +4,22 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="carnet.panneauDeControle.PanneauDeControlePageDuCarnet">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="carnet.panneauDeControle.PanneauDeControlePageDuCarnet">
     <center>
         <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <left>
-                <Button fx:id="boutonPrec" mnemonicParsing="false" onAction="#pagePrecedente" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER" />
+                <Button fx:id="boutonPrec" mnemonicParsing="false" onAction="#pagePrecedente" prefHeight="40.0"
+                        prefWidth="40.0" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER"/>
             </left>
             <right>
-                <Button fx:id="boutonSuiv" mnemonicParsing="false" onAction="#pageSuivante" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER" />
+                <Button fx:id="boutonSuiv" mnemonicParsing="false" onAction="#pageSuivante" prefHeight="40.0"
+                        prefWidth="40.0" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER"/>
             </right>
             <bottom>
-                <Button mnemonicParsing="false" onAction="#nouvellePage" opacity="0.0" prefHeight="40.0" prefWidth="40.0" text="Button" BorderPane.alignment="CENTER" />
+                <Button mnemonicParsing="false" onAction="#nouvellePage" opacity="0.0" prefHeight="40.0"
+                        prefWidth="40.0" text="Button" BorderPane.alignment="CENTER"/>
             </bottom>
             <center>
                 <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -23,13 +28,18 @@
                             <bottom>
                                 <HBox alignment="CENTER" spacing="10.0">
                                     <children>
-                                        <Button fx:id="home" mnemonicParsing="false" onAction="#goHome" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: transparent;" />
-                                        <Button fx:id="boutonSauvegarde" mnemonicParsing="false" onAction="#enregistrer" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: transparent;" />
+                                        <Button fx:id="home" mnemonicParsing="false" onAction="#goHome"
+                                                prefHeight="40.0" prefWidth="40.0"
+                                                style="-fx-background-color: transparent;"/>
+                                        <Button fx:id="boutonSauvegarde" mnemonicParsing="false" onAction="#enregistrer"
+                                                prefHeight="40.0" prefWidth="40.0"
+                                                style="-fx-background-color: transparent;"/>
                                     </children>
                                 </HBox>
                             </bottom>
                             <center>
-                                <TextArea fx:id="zoneDeTexte" prefHeight="294.0" prefWidth="211.0" promptText="Racontez votre voyage..." BorderPane.alignment="CENTER" />
+                                <TextArea fx:id="zoneDeTexte" prefHeight="294.0" prefWidth="211.0"
+                                          promptText="Racontez votre voyage..." BorderPane.alignment="CENTER"/>
                             </center>
                             <top>
                                 <Label fx:id="titre" alignment="CENTER" prefHeight="26.0" prefWidth="199.0" text="Titre"
